vm/snapshots/exceptions-reporting-UncaughtExceptionTest.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.IllegalStateException: uncaught-test
	at exceptions.reporting.UncaughtExceptionTest.fail(UncaughtExceptionTest.java:13)
	at exceptions.reporting.UncaughtExceptionTest.main(UncaughtExceptionTest.java:9)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.IllegalStateException: uncaught-test
	at exceptions.reporting.UncaughtExceptionTest.fail(UncaughtExceptionTest.java:13)
	at exceptions.reporting.UncaughtExceptionTest.main(UncaughtExceptionTest.java:9)
