vm/snapshots/exceptions-simplest_catch_block-SimplestCatchShouldWorkOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Caught exception
----- STDERR -----
