vm/snapshots/execution-integer-arithmetic-DivisionByZeroTest.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArithmeticException: / by zero
	at execution.integer.arithmetic.DivisionByZeroTest.main(DivisionByZeroTest.java:9)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArithmeticException: / by zero
	at execution.integer.arithmetic.DivisionByZeroTest.main(DivisionByZeroTest.java:9)
