vm/snapshots/execution-invocation-SymbolicOwnerResolutionTest.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NoSuchMethodError: 'void java.io.FilterOutputStream.println(java.lang.String)'
	at execution.invocation.SymbolicOwnerResolutionTest.main(Unknown Source)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NoSuchMethodError: 'void java.io.FilterOutputStream.println(java.lang.String)'
	at execution.invocation.SymbolicOwnerResolutionTest.main(Unknown Source)
