vm/snapshots/execution-longs-arithmetic-RemainderByZeroTest.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArithmeticException: / by zero
	at execution.longs.arithmetic.RemainderByZeroTest.main(RemainderByZeroTest.java:11)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.ArithmeticException: / by zero
	at execution.longs.arithmetic.RemainderByZeroTest.main(RemainderByZeroTest.java:11)
